# cubik

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp  makefile  pyproject.toml  pytest.py
.github/workflows/: ci.yml  release.yml  wheels.yml
cubik/: __init__.py
docs/: MakingTags.md  ParityCheck.md
inc/: common.hpp  cube.hpp  parity.hpp  solver.hpp
interface/: CMakeLists.txt  cubik.i  moves.i  solver.i
python/: pytest.py  solve.py
src/: CMakeLists.txt  common.cpp  cube.cpp  parity.cpp  solver.cpp
src/moves/: B.cpp  D.cpp  E.cpp  F.cpp  L.cpp  M.cpp  R.cpp  S.cpp  U.cpp  X.cpp  Y.cpp  Z.cpp
src/searches/: a_star.cpp  ida_star.cpp
tests/: CMakeLists.txt  test_main.cpp  test_moves.cpp  test_parity.cpp  test_solver.cpp  toml_helper.hpp
tests/solutions/parity/: BadCenters.toml  BadCornerAndEdge.toml  CornerOrientationBad.toml  CornerPermutationBad.toml  CornerPermutationGood.toml  DoubleEdgeFlip.toml  EdgeOrientation.toml  EdgePermutation.toml  OverColor.toml  ScrambleBad.toml  ScrambleBadCorner.toml  ScrambleBadEdge.toml  ScrambleBadEdgeAndCorner.toml  ScrambleGood.toml  TwistedCorner.toml  TwistedCorner2.toml  TwistedCorners.toml  TwistedCornersValid.toml
tests/solutions/solved/: EmptyTemplate.toml
